crates/litert-lm-rust/c/engine.h


typedef struct LiteRtLmEngine LiteRtLmEngine;
typedef struct LiteRtLmSession LiteRtLmSession;
typedef struct LiteRtLmResponses LiteRtLmResponses;
typedef struct LiteRtLmEngineSettings LiteRtLmEngineSettings;
typedef struct LiteRtLmBenchmarkInfo LiteRtLmBenchmarkInfo;
typedef struct LiteRtLmInputData LiteRtLmInputData;
typedef struct LiteRtLmSessionConfig LiteRtLmSessionConfig;
typedef enum {
  kLiteRtLmLogSeverityVerbose = 0,
  kLiteRtLmLogSeverityDebug = 1,
  kLiteRtLmLogSeverityInfo = 2,
  kLiteRtLmLogSeverityWarning = 3,
  kLiteRtLmLogSeverityError = 4,
  kLiteRtLmLogSeverityFatal = 5,
  kLiteRtLmLogSeveritySilent = 1000,
} LiteRtLmLogSeverity;
LITERT_LM_C_API_EXPORT
void litert_lm_set_min_log_level(LiteRtLmLogSeverity level);
typedef enum {
  kLiteRtLmInputDataTypeText,
  kLiteRtLmInputDataTypeImage,
  kLiteRtLmInputDataTypeImageEnd,
  kLiteRtLmInputDataTypeAudio,
  kLiteRtLmInputDataTypeAudioEnd,
} LiteRtLmInputDataType;
LITERT_LM_C_API_EXPORT
LiteRtLmInputData* litert_lm_input_data_create(LiteRtLmInputDataType type,
                                               const void* data, size_t size);
LITERT_LM_C_API_EXPORT
void litert_lm_input_data_delete(LiteRtLmInputData* input_data);
LITERT_LM_C_API_EXPORT
LiteRtLmEngineSettings* litert_lm_engine_settings_create(
    const char* model_path, const char* backend_str,
    const char* vision_backend_str, const char* audio_backend_str);
LITERT_LM_C_API_EXPORT
LiteRtLmEngineSettings*
litert_lm_engine_settings_create_from_raw_file_descriptor(
    int fd, const char* backend_str, const char* vision_backend_str,
    const char* audio_backend_str);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_delete(LiteRtLmEngineSettings* settings);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_max_num_tokens(
    LiteRtLmEngineSettings* settings, int max_num_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_num_threads(LiteRtLmEngineSettings* settings,
                                               int num_threads);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_audio_num_threads(
    LiteRtLmEngineSettings* settings, int num_threads);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_parallel_file_section_loading(
    LiteRtLmEngineSettings* settings, bool parallel_file_section_loading);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_max_num_images(
    LiteRtLmEngineSettings* settings, int max_num_images);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_cache_dir(LiteRtLmEngineSettings* settings,
                                             const char* cache_dir);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_litert_dispatch_lib_dir(
    LiteRtLmEngineSettings* settings, const char* lib_dir);
typedef enum {
  kLiteRtLmActivationDataTypeFloat32 = 0,
  kLiteRtLmActivationDataTypeFloat16 = 1,
  kLiteRtLmActivationDataTypeInt16 = 2,
  kLiteRtLmActivationDataTypeInt8 = 3,
} LiteRtLmActivationDataType;
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_activation_data_type(
    LiteRtLmEngineSettings* settings,
    LiteRtLmActivationDataType activation_data_type);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_prefill_chunk_size(
    LiteRtLmEngineSettings* settings, int prefill_chunk_size);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_enable_benchmark(
    LiteRtLmEngineSettings* settings);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_num_prefill_tokens(
    LiteRtLmEngineSettings* settings, int num_prefill_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_num_decode_tokens(
    LiteRtLmEngineSettings* settings, int num_decode_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_enable_speculative_decoding(
    LiteRtLmEngineSettings* settings, bool enable_speculative_decoding);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_gpu_decode_steps_per_sync(
    LiteRtLmEngineSettings* settings, int num_decode_steps_per_sync);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_gpu_wait_for_weight_uploads(
    LiteRtLmEngineSettings* settings, bool wait_for_weight_uploads);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_use_ringbuffers_local_attention(
    LiteRtLmEngineSettings* settings, bool use_ringbuffers_local_attention);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_lora_rank(LiteRtLmEngineSettings* settings,
                                             int lora_rank);
LITERT_LM_C_API_EXPORT
int litert_lm_engine_settings_set_supported_lora_ranks(
    LiteRtLmEngineSettings* settings, const int* lora_ranks, size_t num_ranks);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_settings_set_audio_lora_rank(
    LiteRtLmEngineSettings* settings, int lora_rank);
LITERT_LM_C_API_EXPORT
int litert_lm_engine_settings_set_supported_audio_lora_ranks(
    LiteRtLmEngineSettings* settings, const int* lora_ranks, size_t num_ranks);
LITERT_LM_C_API_EXPORT
LiteRtLmEngine* litert_lm_engine_create(const LiteRtLmEngineSettings* settings);
LITERT_LM_C_API_EXPORT
void litert_lm_engine_delete(LiteRtLmEngine* engine);
LITERT_LM_C_API_EXPORT
LiteRtLmSession* litert_lm_engine_create_session(LiteRtLmEngine* engine,
                                                 LiteRtLmSessionConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_session_delete(LiteRtLmSession* session);
LITERT_LM_C_API_EXPORT
void litert_lm_session_cancel_process(LiteRtLmSession* session);
LITERT_LM_C_API_EXPORT
int litert_lm_session_run_prefill(LiteRtLmSession* session,
                                  const LiteRtLmInputData* const* inputs,
                                  size_t num_inputs);
LITERT_LM_C_API_EXPORT
LiteRtLmResponses* litert_lm_session_run_decode(LiteRtLmSession* session);
LITERT_LM_C_API_EXPORT
LiteRtLmResponses* litert_lm_session_run_text_scoring(LiteRtLmSession* session,
                                                      const char** target_text,
                                                      size_t num_targets,
                                                      bool store_token_lengths);
LITERT_LM_C_API_EXPORT
LiteRtLmResponses* litert_lm_session_generate_content(
    LiteRtLmSession* session, const LiteRtLmInputData* const* inputs,
    size_t num_inputs);
LITERT_LM_C_API_EXPORT
void litert_lm_responses_delete(LiteRtLmResponses* responses);
LITERT_LM_C_API_EXPORT
int litert_lm_responses_get_num_candidates(const LiteRtLmResponses* responses);
LITERT_LM_C_API_EXPORT
const char* litert_lm_responses_get_response_text_at(
    const LiteRtLmResponses* responses, int index);
LITERT_LM_C_API_EXPORT
bool litert_lm_responses_has_score_at(const LiteRtLmResponses* responses,
                                      int index);
LITERT_LM_C_API_EXPORT
float litert_lm_responses_get_score_at(const LiteRtLmResponses* responses,
                                       int index);
LITERT_LM_C_API_EXPORT
bool litert_lm_responses_has_token_length_at(const LiteRtLmResponses* responses,
                                             int index);
LITERT_LM_C_API_EXPORT
int litert_lm_responses_get_token_length_at(const LiteRtLmResponses* responses,
                                            int index);
LITERT_LM_C_API_EXPORT
bool litert_lm_responses_has_token_scores_at(const LiteRtLmResponses* responses,
                                             int index);
LITERT_LM_C_API_EXPORT
int litert_lm_responses_get_num_token_scores_at(
    const LiteRtLmResponses* responses, int index);
LITERT_LM_C_API_EXPORT
const float* litert_lm_responses_get_token_scores_at(
    const LiteRtLmResponses* responses, int index);
LITERT_LM_C_API_EXPORT
LiteRtLmBenchmarkInfo* litert_lm_session_get_benchmark_info(
    LiteRtLmSession* session);
LITERT_LM_C_API_EXPORT
void litert_lm_benchmark_info_delete(LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
double litert_lm_benchmark_info_get_time_to_first_token(
    const LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
double litert_lm_benchmark_info_get_total_init_time_in_second(
    const LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
int litert_lm_benchmark_info_get_num_prefill_turns(
    const LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
int litert_lm_benchmark_info_get_num_decode_turns(
    const LiteRtLmBenchmarkInfo* benchmark_info);
LITERT_LM_C_API_EXPORT
int litert_lm_benchmark_info_get_prefill_token_count_at(
    const LiteRtLmBenchmarkInfo* benchmark_info, int index);
LITERT_LM_C_API_EXPORT
int litert_lm_benchmark_info_get_decode_token_count_at(
    const LiteRtLmBenchmarkInfo* benchmark_info, int index);
LITERT_LM_C_API_EXPORT
double litert_lm_benchmark_info_get_prefill_tokens_per_sec_at(
    const LiteRtLmBenchmarkInfo* benchmark_info, int index);
LITERT_LM_C_API_EXPORT
double litert_lm_benchmark_info_get_decode_tokens_per_sec_at(
    const LiteRtLmBenchmarkInfo* benchmark_info, int index);
typedef struct LiteRtLmStreamChunk LiteRtLmStreamChunk;
LITERT_LM_C_API_EXPORT
const char* litert_lm_stream_chunk_get_text(const LiteRtLmStreamChunk* chunk);
LITERT_LM_C_API_EXPORT
bool litert_lm_stream_chunk_is_final(const LiteRtLmStreamChunk* chunk);
LITERT_LM_C_API_EXPORT
const char* litert_lm_stream_chunk_get_error(const LiteRtLmStreamChunk* chunk);