crates/litert-lm-rust/src/bindings.rs

pub const LiteRtLmLogSeverity_kLiteRtLmLogSeverityVerbose: LiteRtLmLogSeverity = 0;
pub const LiteRtLmLogSeverity_kLiteRtLmLogSeverityDebug: LiteRtLmLogSeverity = 1;
pub const LiteRtLmLogSeverity_kLiteRtLmLogSeverityInfo: LiteRtLmLogSeverity = 2;
pub const LiteRtLmLogSeverity_kLiteRtLmLogSeverityWarning: LiteRtLmLogSeverity = 3;
pub const LiteRtLmLogSeverity_kLiteRtLmLogSeverityError: LiteRtLmLogSeverity = 4;
pub const LiteRtLmLogSeverity_kLiteRtLmLogSeverityFatal: LiteRtLmLogSeverity = 5;
pub const LiteRtLmLogSeverity_kLiteRtLmLogSeveritySilent: LiteRtLmLogSeverity = 1000;
pub type LiteRtLmLogSeverity = ::std::os::raw::c_int;
unsafe extern "C" {
    pub fn litert_lm_set_min_log_level(level: LiteRtLmLogSeverity);
}
pub const LiteRtLmInputDataType_kLiteRtLmInputDataTypeText: LiteRtLmInputDataType = 0;
pub const LiteRtLmInputDataType_kLiteRtLmInputDataTypeImage: LiteRtLmInputDataType = 1;
pub const LiteRtLmInputDataType_kLiteRtLmInputDataTypeImageEnd: LiteRtLmInputDataType = 2;
pub const LiteRtLmInputDataType_kLiteRtLmInputDataTypeAudio: LiteRtLmInputDataType = 3;
pub const LiteRtLmInputDataType_kLiteRtLmInputDataTypeAudioEnd: LiteRtLmInputDataType = 4;
pub type LiteRtLmInputDataType = ::std::os::raw::c_int;
unsafe extern "C" {
    pub fn litert_lm_input_data_create(
        type_: LiteRtLmInputDataType,
        data: *const ::std::os::raw::c_void,
        size: usize,
    ) -> *mut LiteRtLmInputData;
}
unsafe extern "C" {
    pub fn litert_lm_input_data_delete(input_data: *mut LiteRtLmInputData);
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_create(
        model_path: *const ::std::os::raw::c_char,
        backend_str: *const ::std::os::raw::c_char,
        vision_backend_str: *const ::std::os::raw::c_char,
        audio_backend_str: *const ::std::os::raw::c_char,
    ) -> *mut LiteRtLmEngineSettings;
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_create_from_raw_file_descriptor(
        fd: ::std::os::raw::c_int,
        backend_str: *const ::std::os::raw::c_char,
        vision_backend_str: *const ::std::os::raw::c_char,
        audio_backend_str: *const ::std::os::raw::c_char,
    ) -> *mut LiteRtLmEngineSettings;
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_delete(settings: *mut LiteRtLmEngineSettings);
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_max_num_tokens(
        settings: *mut LiteRtLmEngineSettings,
        max_num_tokens: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_num_threads(
        settings: *mut LiteRtLmEngineSettings,
        num_threads: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_audio_num_threads(
        settings: *mut LiteRtLmEngineSettings,
        num_threads: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_parallel_file_section_loading(
        settings: *mut LiteRtLmEngineSettings,
        parallel_file_section_loading: bool,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_max_num_images(
        settings: *mut LiteRtLmEngineSettings,
        max_num_images: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_cache_dir(
        settings: *mut LiteRtLmEngineSettings,
        cache_dir: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_litert_dispatch_lib_dir(
        settings: *mut LiteRtLmEngineSettings,
        lib_dir: *const ::std::os::raw::c_char,
    );
}
pub const LiteRtLmActivationDataType_kLiteRtLmActivationDataTypeFloat32:
    LiteRtLmActivationDataType = 0;
pub const LiteRtLmActivationDataType_kLiteRtLmActivationDataTypeFloat16:
    LiteRtLmActivationDataType = 1;
pub const LiteRtLmActivationDataType_kLiteRtLmActivationDataTypeInt16: LiteRtLmActivationDataType =
    2;
pub const LiteRtLmActivationDataType_kLiteRtLmActivationDataTypeInt8: LiteRtLmActivationDataType =
    3;
pub type LiteRtLmActivationDataType = ::std::os::raw::c_int;
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_activation_data_type(
        settings: *mut LiteRtLmEngineSettings,
        activation_data_type: LiteRtLmActivationDataType,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_prefill_chunk_size(
        settings: *mut LiteRtLmEngineSettings,
        prefill_chunk_size: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_enable_benchmark(settings: *mut LiteRtLmEngineSettings);
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_num_prefill_tokens(
        settings: *mut LiteRtLmEngineSettings,
        num_prefill_tokens: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_num_decode_tokens(
        settings: *mut LiteRtLmEngineSettings,
        num_decode_tokens: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_enable_speculative_decoding(
        settings: *mut LiteRtLmEngineSettings,
        enable_speculative_decoding: bool,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_gpu_decode_steps_per_sync(
        settings: *mut LiteRtLmEngineSettings,
        num_decode_steps_per_sync: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_gpu_wait_for_weight_uploads(
        settings: *mut LiteRtLmEngineSettings,
        wait_for_weight_uploads: bool,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_use_ringbuffers_local_attention(
        settings: *mut LiteRtLmEngineSettings,
        use_ringbuffers_local_attention: bool,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_lora_rank(
        settings: *mut LiteRtLmEngineSettings,
        lora_rank: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_supported_lora_ranks(
        settings: *mut LiteRtLmEngineSettings,
        lora_ranks: *const ::std::os::raw::c_int,
        num_ranks: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_audio_lora_rank(
        settings: *mut LiteRtLmEngineSettings,
        lora_rank: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_engine_settings_set_supported_audio_lora_ranks(
        settings: *mut LiteRtLmEngineSettings,
        lora_ranks: *const ::std::os::raw::c_int,
        num_ranks: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_engine_create(settings: *const LiteRtLmEngineSettings) -> *mut LiteRtLmEngine;
}
unsafe extern "C" {
    pub fn litert_lm_engine_delete(engine: *mut LiteRtLmEngine);
}
unsafe extern "C" {
    pub fn litert_lm_engine_create_session(
        engine: *mut LiteRtLmEngine,
        config: *mut LiteRtLmSessionConfig,
    ) -> *mut LiteRtLmSession;
}
unsafe extern "C" {
    pub fn litert_lm_session_delete(session: *mut LiteRtLmSession);
}
unsafe extern "C" {
    pub fn litert_lm_session_cancel_process(session: *mut LiteRtLmSession);
}
unsafe extern "C" {
    pub fn litert_lm_session_run_prefill(
        session: *mut LiteRtLmSession,
        inputs: *const *const LiteRtLmInputData,
        num_inputs: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_session_run_decode(session: *mut LiteRtLmSession) -> *mut LiteRtLmResponses;
}
unsafe extern "C" {
    pub fn litert_lm_session_run_text_scoring(
        session: *mut LiteRtLmSession,
        target_text: *mut *const ::std::os::raw::c_char,
        num_targets: usize,
        store_token_lengths: bool,
    ) -> *mut LiteRtLmResponses;
}
unsafe extern "C" {
    pub fn litert_lm_session_generate_content(
        session: *mut LiteRtLmSession,
        inputs: *const *const LiteRtLmInputData,
        num_inputs: usize,
    ) -> *mut LiteRtLmResponses;
}
unsafe extern "C" {
    pub fn litert_lm_responses_delete(responses: *mut LiteRtLmResponses);
}
unsafe extern "C" {
    pub fn litert_lm_responses_get_num_candidates(
        responses: *const LiteRtLmResponses,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_responses_get_response_text_at(
        responses: *const LiteRtLmResponses,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn litert_lm_responses_has_score_at(
        responses: *const LiteRtLmResponses,
        index: ::std::os::raw::c_int,
    ) -> bool;
}
unsafe extern "C" {
    pub fn litert_lm_responses_get_score_at(
        responses: *const LiteRtLmResponses,
        index: ::std::os::raw::c_int,
    ) -> f32;
}
unsafe extern "C" {
    pub fn litert_lm_responses_has_token_length_at(
        responses: *const LiteRtLmResponses,
        index: ::std::os::raw::c_int,
    ) -> bool;
}
unsafe extern "C" {
    pub fn litert_lm_responses_get_token_length_at(
        responses: *const LiteRtLmResponses,
        index: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_responses_has_token_scores_at(
        responses: *const LiteRtLmResponses,
        index: ::std::os::raw::c_int,
    ) -> bool;
}
unsafe extern "C" {
    pub fn litert_lm_responses_get_num_token_scores_at(
        responses: *const LiteRtLmResponses,
        index: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_responses_get_token_scores_at(
        responses: *const LiteRtLmResponses,
        index: ::std::os::raw::c_int,
    ) -> *const f32;
}
unsafe extern "C" {
    pub fn litert_lm_session_get_benchmark_info(
        session: *mut LiteRtLmSession,
    ) -> *mut LiteRtLmBenchmarkInfo;
}
unsafe extern "C" {
    pub fn litert_lm_benchmark_info_delete(benchmark_info: *mut LiteRtLmBenchmarkInfo);
}
unsafe extern "C" {
    pub fn litert_lm_benchmark_info_get_time_to_first_token(
        benchmark_info: *const LiteRtLmBenchmarkInfo,
    ) -> f64;
}
unsafe extern "C" {
    pub fn litert_lm_benchmark_info_get_total_init_time_in_second(
        benchmark_info: *const LiteRtLmBenchmarkInfo,
    ) -> f64;
}
unsafe extern "C" {
    pub fn litert_lm_benchmark_info_get_num_prefill_turns(
        benchmark_info: *const LiteRtLmBenchmarkInfo,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_benchmark_info_get_num_decode_turns(
        benchmark_info: *const LiteRtLmBenchmarkInfo,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_benchmark_info_get_prefill_token_count_at(
        benchmark_info: *const LiteRtLmBenchmarkInfo,
        index: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_benchmark_info_get_decode_token_count_at(
        benchmark_info: *const LiteRtLmBenchmarkInfo,
        index: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_benchmark_info_get_prefill_tokens_per_sec_at(
        benchmark_info: *const LiteRtLmBenchmarkInfo,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
unsafe extern "C" {
    pub fn litert_lm_benchmark_info_get_decode_tokens_per_sec_at(
        benchmark_info: *const LiteRtLmBenchmarkInfo,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmStreamChunk {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn litert_lm_stream_chunk_get_text(
        chunk: *const LiteRtLmStreamChunk,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn litert_lm_stream_chunk_is_final(chunk: *const LiteRtLmStreamChunk) -> bool;
}
unsafe extern "C" {
    pub fn litert_lm_stream_chunk_get_error(
        chunk: *const LiteRtLmStreamChunk,
    ) -> *const ::std::os::raw::c_char;
}
